@@ -36,6 +36,7 @@ Change Log
     - Removed drawingEnabled flag from Gadget.
     - Gadget::remove() and removeChild() will trigger a redraw of the gadget's
       visible regions (ie. erase it) automatically.
+    - Pong uses a SuperBitmap as its display.
 
   - New Features:
     - Added makefile for demo - can now be built from command line.
